Usecase-10-Policy-as-code/deploy_nolabels.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bad-app

  labels:
    owner: devops

spec:
  replicas: 1

  selector:
    matchLabels:
      app: bad-app

  template:
    metadata:
      labels:
        app: bad-app

    spec:
      containers:
      - name: nginx
        image: nginx:1.29
