Usecase-10-Policy-as-code/deploy_priv.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: privileged-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: privileged-app

  template:
    metadata:
      labels:
        app: privileged-app

    spec:
      containers:

      - name: nginx

        image: nginx:1.29

        securityContext:
          privileged: true
