Usecase-10-Policy-as-code/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-good

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx

  template:

    metadata:

      labels:

        app: nginx

    spec:

      containers:

      - name: nginx

        image: nginx:1.29

        ports:

        - containerPort: 80
