Usecase-10-Policy-as-code/deployment_violation.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-latest

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:

      - name: nginx

        image: nginx:latest

        ports:

        - containerPort: 80
