Usecase-10-Policy-as-code/dockerhub-image.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-dockerhub

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx

  template:

    metadata:
      labels:
        app: nginx

    spec:
      containers:

      - name: nginx

        image: nginx:1.29
