Usecase-10-Policy-as-code/missing-resources.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bad-resource-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: bad-resource-app

  template:
    metadata:
      labels:
        app: bad-resource-app

    spec:
      containers:
      - name: nginx

        image: nginx:1.29
