Usecase-10-Policy-as-code/block_prividege.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockPrivileged

metadata:
  name: block-privileged

spec:

  match:

    kinds:
      - apiGroups:
          - apps
        kinds:
          - Deployment
