Usecase-10-Policy-as-code/required-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources

metadata:
  name: required-resources

spec:

  match:

    kinds:
      - apiGroups:
          - apps
        kinds:
          - Deployment
